--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
 
     <!-- ---SECTION ABOUT--- -->
     <section id="section_about" class="min-vh-100 d-flex justify-content-center align-items-center bg-norian-light">
-        <div class="container">
-            <div class="row justify-content-center">
+        <div class="container py-5 my-5">
+            <div class="row my-5 justify-content-center">
                 
                 <div class="col-12 text-center">
                     <h1 class="fw-bold text-uppercase">Who we are</h1>
